<resources>
    <string name="app_name">Unicode Tasks</string>
    <string name="nav_userinfo_title">User Info</string>
    <string name="nav_contacts_title">Contact List</string>
    <string name="nav_weather_title">Weather</string>
    <string name="nav_settings_title">Settings</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>
    <string name="frag_userinfo_title">User Info</string>
    <string name="user_name_label_text">Enter Name : </string>
    <string name="user_birthdate_label_text">Enter Birthdate</string>
    <string name="user_phonenum_label_text">Enter Phone number: </string>
    <string name="save_userinfo">Save</string>
    <string name="clear_userinfo">Clear</string>
    <string name="nav_header_username_label">Guest User</string>
    <string name="nav_header_userphone_label">No Phone no.</string>
    <string name="nav_header_userbirth_label">No Birthdate</string>
    <string name="frag_contactlist_title">Contacts List</string>
    <string name="permission_rationale_title">Permission Required</string>
    <string name="contacts_permission_rationale_msg">In order to display contact list, app requires permission to read contacts</string>
    <string name="permission_rationale_accept_btn">Accept</string>
    <string name="frag_weatherinfo_title">Weather Data</string>
    <string name="city_name_hint">Enter City - eg Mumbai</string>
    <string name="search_city_weather_btn_label">Search</string>
    <string name="internet_permission_rationale_msg">App requires internet access for getting weather data</string>
    <string name="degree_celsius_symbol">\u2103</string>
    <string name="get_user_location">My Location</string>
    <string name="location_permission_rationale_msg">App needs to use location services to obtain location for showing weather data</string>
    <string name="switch_on_location_dialog_title">Switch on location services</string>
    <string name="switch_on_location_dialog_msg">Location services are off. Switch on location services ? </string>
    <string name="dial_contact">Dial</string>
    <string name="share_contact">Share contact</string>
    <string name="set_profilepic_button">Set Profile Picture</string>
    <string name="profilepic_source_dialog_msg">Select image source</string>
    <string name="gallery_permission_rationale_msg">App requires to access your gallery in order to set profile picture</string>
    <string name="camera_permission_rationale_msg">App requires to access your camera in order to set profile picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_theme_label">Theme :</string>
    <string-array name="themes_list">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string name="apply_settings">Apply</string>
</resources>