<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userinfo"
            android:title="@string/nav_userinfo_title"
            android:icon="@drawable/icon_nav_userinfo"
            />
        <item
            android:id="@+id/nav_contacts"
            android:title="@string/nav_contacts_title"
            android:icon="@drawable/icon_nav_contacts"
            />

        <item
            android:id="@+id/nav_weather"
            android:title="@string/nav_weather_title"
            android:icon="@drawable/icon_nav_weather"
            />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings_title"
            android:icon="@drawable/icon_nav_settings"
            />

    </group>

    <group android:checkableBehavior="none">
        <item
            android:title=""
            android:checkable="false"
            />

        <item
            android:title="@string/credits"
            android:checkable="false"
            />
    </group>

</menu>